--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,8 @@
 
             <Button
                 android:id="@+id/add_item_button"
-                android:layout_width="192dp"
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
                 android:layout_height="50dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
@@ -56,8 +57,10 @@
 
             <Button
                 android:id="@+id/scan_button"
-                android:layout_width="192dp"
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
                 android:layout_height="50dp"
+                android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/steel_blue"
                 android:fontFamily="sans-serif-black"
                 android:text="SCAN ITEM/LIST" />
