Updated for permission

--- a/app/src/main/res/layout/activity_image_upload.xml
+++ b/app/src/main/res/layout/activity_image_upload.xml
@@ -39,6 +39,13 @@
 <!--</LinearLayout>-->
 
 <!-- res/layout/activity_image_upload.xml -->
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rootLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -66,3 +73,5 @@
         android:text="Scan Your List"
         android:layout_marginTop="16dp"/>
 </LinearLayout>
+
+</RelativeLayout>
