--- a/app/src/main/res/layout/activity_integration_list.xml
+++ b/app/src/main/res/layout/activity_integration_list.xml
@@ -21,6 +21,6 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.7"
-        tools:layout="@layout/fragment_details" />
+        tools:layout="@layout/search_f" />
 
 </LinearLayout>
