--- a/app/src/main/res/layout/checklist_item.xml
+++ b/app/src/main/res/layout/checklist_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:layout_margin="10dp"
+    android:backgroundTint="@color/white"
     app:cardElevation="6dp">
 
     <LinearLayout
@@ -25,7 +26,7 @@
             android:layout_height="40dp"
             android:layout_weight="0"
             android:autofillHints=""
-            android:backgroundTint="@color/white"
+            android:backgroundTint=""
             app:srcCompat="@drawable/pencil_icon" />
 
         <ImageButton
