--- a/app/src/main/res/layout/listcard_f.xml
+++ b/app/src/main/res/layout/listcard_f.xml
@@ -2,35 +2,31 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:layout_margin="10dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="1dp"
+    android:backgroundTint="@color/white"
     app:cardElevation="6dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
+        <CheckBox
+            android:layout_width="32dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical" />
+
+        <TextView
+            android:id="@+id/itemname"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="5dp"
-            android:orientation="vertical">
-
-
-            <TextView
-                android:id="@+id/itemname"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                android:text="Item Name"
-                android:textSize="20dp"
-                android:textStyle="bold" />
-
-
-        </RelativeLayout>
+            android:text="Item Name"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
 
     </LinearLayout>
 
