--- a/app/src/main/res/layout/checklist_item.xml
+++ b/app/src/main/res/layout/checklist_item.xml
@@ -25,8 +25,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_weight="0"
-            android:autofillHints=""
-            android:backgroundTint=""
+            android:backgroundTint="@color/white"
             app:srcCompat="@drawable/pencil_icon" />
 
         <ImageButton
@@ -34,7 +33,6 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_weight="0"
-            android:autofillHints=""
             android:backgroundTint="@color/white"
             app:srcCompat="@drawable/delete_icon" />
 
