--- a/app/src/main/res/layout/activity_integration_image_upload.xml
+++ b/app/src/main/res/layout/activity_integration_image_upload.xml
@@ -7,12 +7,7 @@
     android:orientation="vertical"
     tools:context=".integration.IntegrationImageUploadActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/btnLayout"
-        android:src="@drawable/ic_launcher_foreground" />
+
 
     <LinearLayout
         android:id="@+id/btnLayout"
@@ -22,20 +17,45 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/galleryPic"
+            android:layout_width="202dp"
+            android:layout_height="223dp"
+            android:layout_above="@+id/btnLayout"
+            android:layout_marginLeft="100dp"
+            android:layout_marginRight="100dp"
+            android:layout_marginBottom="0dp"
+            android:foregroundGravity="center"
+            android:src="@drawable/ic_gallery" />
+
         <Button
             android:id="@+id/galleryButton"
+            android:layout_width="220dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="90dp"
             android:backgroundTint="@color/sky_blue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="Select Image from Gallery" />
+
+        <ImageView
+            android:id="@+id/cameraPic"
+            android:layout_width="202dp"
+            android:layout_height="223dp"
+            android:layout_above="@+id/btnLayout"
+            android:layout_marginLeft="100dp"
+            android:layout_marginRight="100dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="1dp"
+            android:foregroundGravity="center"
+            android:src="@drawable/ic_camera" />
 
         <Button
             android:id="@+id/cameraButton"
+            android:layout_width="220dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="100dp"
             android:backgroundTint="@color/sky_blue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="Scan Your List" />
 
         <LinearLayout
@@ -44,7 +64,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:visibility="gone"
-            tools:visibility="visible">
+            tools:visibility="gone">
 
             <Button
                 android:id="@+id/textScan"
