--- a/app/src/main/res/layout/checklist_item.xml
+++ b/app/src/main/res/layout/checklist_item.xml
@@ -19,6 +19,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="@color/black"
+            android:textSize="18sp"
             android:buttonTint="@color/steel_blue" />
 
         <ImageButton
