--- a/app/src/main/res/layout/listcard_f.xml
+++ b/app/src/main/res/layout/listcard_f.xml
@@ -14,6 +14,7 @@
 
 
         <CheckBox
+            android:id="@+id/checkBox"
             android:layout_width="32dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical" />
